[package]
name = "rust-bittorrent"
version = "0.1.0"
authors = ["Addison Heavner <aaheavner@mix.wvu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
sha1 = "0.6.0"
serde_bencode = "^0.2.1"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "^0.11"